tests/functional/fixtures/ext/error/classtype/ext.php
<?php

class phpbb_ext_error_classtype_ext extends phpbb_extension_base
{
	
}
